[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/tiles-pixel/grass-tile.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level1/Shop.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/BangladeshNow.gd" type="Script" id=4]
[ext_resource path="res://Levels/Level1/Farmer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level1/Fisherman.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Level1/Doctor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level1/Home.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/Level1/Scientist.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "grass-tile.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="BangladeshNow" type="Node2D"]
script = ExtResource( 4 )

[node name="Shop" parent="." instance=ExtResource( 3 )]
position = Vector2( 287, 47 )

[node name="Farmer" parent="." instance=ExtResource( 5 )]
position = Vector2( 795, 44 )

[node name="Fisherman" parent="." instance=ExtResource( 6 )]
position = Vector2( 1374, -1 )

[node name="Doctor" parent="." instance=ExtResource( 7 )]
position = Vector2( 2082, 22 )

[node name="Home" parent="." instance=ExtResource( 8 )]
position = Vector2( 2773, -2 )

[node name="BangladeshTileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -23, 0, 0, -22, 0, 0, -21, 0, 0, -20, 0, 0, -19, 0, 0, -18, 0, 0, -17, 0, 0, -16, 0, 0, -15, 0, 0, -14, 0, 0, 65522, -1610612736, 0, 131058, -1610612736, 0, 196594, -1610612736, 0, 262130, -1610612736, 0, 327666, -1610612736, 0, 393202, -1610612736, 0, 458738, -1610612736, 0, 524274, -1610612736, 0, 589810, -1610612736, 0, 655347, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 589887, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589891, 0, 0, 589892, 0, 0, 589893, 0, 0, 589894, 0, 0, 589895, 0, 0, 589896, 0, 0, 589897, 0, 0, 589898, 0, 0, 589899, 0, 0, 589900, 0, 0, 589901, 0, 0, 589902, 0, 0, 589903, 0, 0, 589904, 0, 0, 589905, 0, 0, 589906, 0, 0, 589907, 0, 0, 589908, 0, 0, 589909, 0, 0, 589910, 0, 0, 589911, 0, 0, 589912, 0, 0, 589913, 0, 0, 589914, 0, 0, 589915, 0, 0, 589916, 0, 0, 589917, 0, 0, 589918, 0, 0, 589919, 0, 0, 589920, 0, 0, 589921, 0, 0, 589922, 0, 0, 589923, 0, 0, 589924, 0, 0, 589925, 0, 0, 589926, 0, 0, 589927, 0, 0, 589928, 0, 0, 589929, 0, 0, 589930, 0, 0, 589931, 0, 0, 589932, 0, 0, 589933, 0, 0, 589934, 0, 0, 589935, 0, 0, 589936, 0, 0, 589937, 0, 0, 589938, 0, 0, 589939, 0, 0, 589940, 0, 0, 589941, 0, 0, 589942, 0, 0, 589943, 0, 0, 589944, 0, 0, 589945, 0, 0, 589946, 0, 0, 589947, 0, 0, 589948, 0, 0, 589949, 0, 0, 589950, 0, 0, 589951, 0, 0, 589952, 0, 0, 589953, 0, 0, 589954, 0, 0, 589955, 0, 0, 589956, 0, 0, 589957, 0, 0, 589958, 0, 0, 589959, 0, 0, 589960, 0, 0, 589961, 0, 0, 589962, 0, 0, 589963, 0, 0, 589964, 0, 0, 589965, 0, 0, 589966, 0, 0, 589967, 0, 0, 589968, 0, 0, 589969, 0, 0, 589970, 0, 0, 589971, 0, 0, 589972, 0, 0, 589973, 0, 0, 589974, 0, 0, 589975, 0, 0, 589976, 0, 0, 589977, 0, 0, 589978, 0, 0, 589979, 0, 0, 589980, 0, 0, 589981, 0, 0, 589982, 0, 0, 589983, 0, 0, 589984, 0, 0, 589985, 0, 0, 589986, 0, 0, 589987, 0, 0, 589988, 0, 0, 589989, 0, 0, 589990, 0, 0, 589991, 0, 0, 589992, 0, 0, 589993, 0, 0, 589994, 0, 0, 589995, 0, 0, 589996, 0, 0, 589997, 0, 0, 589998, 0, 0, 589999, 0, 0, 590000, 0, 0, 590001, 0, 0, 590002, 0, 0, 590003, 0, 0, 590004, 0, 0, 590005, 0, 0, 590006, 0, 0, 590007, 0, 0, 590008, 0, 0, 590009, 0, 0, 590010, 0, 0, 590011, 0, 0, 590012, 0, 0, 590013, 0, 0, 590014, 0, 0, 590015, 0, 0, 590016, 0, 0, 590017, 0, 0, 590018, 0, 0, 590019, 0, 0, 590020, 0, 0, 590021, 0, 0, 590022, 0, 0, 590023, 0, 0, 590024, 0, 0, 590025, 0, 0, 590026, 0, 0, 590027, 0, 0, 590028, 0, 0, 590029, 0, 0, 590030, 0, 0, 590031, 0, 0, 590032, 0, 0, 590033, 0, 0, 590034, 0, 0, 590035, 0, 0, 590036, 0, 0, 590037, 0, 0, 590038, 0, 0, 590039, 0, 0, 590040, 0, 0, 590041, 0, 0, 590042, 0, 0, 590043, 0, 0, 590044, 0, 0, 590045, 0, 0, 590046, 0, 0, 590047, 0, 0, 590048, 0, 0, 590049, 0, 0, 590050, 0, 0, 590051, 0, 0, 590052, 0, 0, 590053, 0, 0, 590054, 0, 0, 590055, 0, 0, 590056, 0, 0, 590057, 0, 0, 590058, 0, 0, 590059, 0, 0, 590060, 0, 0, 590061, 0, 0, 590062, 0, 0, 590063, 0, 0, 590064, 0, 0, 590065, 0, 0, 590066, 0, 0, 590067, 0, 0, 590068, 0, 0, 590069, 0, 0, 590070, 0, 0, 590071, 0, 0, 590072, 0, 0, 590073, 0, 0, 590074, 0, 0, 590075, 0, 0, 590076, 0, 0, 590077, 0, 0, 590078, 0, 0, 590079, 0, 0, 590080, 0, 0, 590081, 0, 0, 590082, 0, 0, 590083, 0, 0, 590084, 0, 0, 590085, 0, 0, 590086, 0, 0, 590087, 0, 0, 590088, 0, 0, 590089, 0, 0, 590090, 0, 0 )

[node name="RobotPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( -74, 107 )

[node name="Scientist" parent="." instance=ExtResource( 9 )]
position = Vector2( 3966, 75 )

[connection signal="body_entered" from="Shop" to="." method="_on_Shop_body_entered"]
[connection signal="body_entered" from="Farmer" to="." method="_on_Farmer_body_entered"]
[connection signal="body_entered" from="Fisherman" to="." method="_on_Fisherman_body_entered"]
[connection signal="body_entered" from="Doctor" to="." method="_on_Doctor_body_entered"]
[connection signal="body_entered" from="Home" to="." method="_on_Home_body_entered"]
[connection signal="tween_completed" from="Scientist/Tween" to="." method="_on_Tween_tween_completed"]

[editable path="Scientist"]
